test/parse_error/let_without_expression.pi
component Component {
  let fail = ;

  <div class="Section">
    {fail}
  </div>
}
